# picolibc

libos/semihost/: meson.build
libos/semihost/common/: meson.build
libos/semihost/fake/: meson.build
libos/semihost/machine/arc/: meson.build
libos/semihost/machine/arc64/: meson.build
libos/semihost/machine/hexagon/: hexagon_semihost.h  hexagon_sys_semihost.c  meson.build
libos/semihost/machine/lm32/: meson.build
libos/semihost/machine/m68k/: meson.build
libos/semihost/machine/mips/: meson.build
libos/semihost/machine/msp430/: meson.build
libos/semihost/machine/nios2/: meson.build
libos/semihost/machine/or1k/: meson.build
libos/semihost/machine/powerpc/: meson.build
libos/semihost/machine/rx/: meson.build
libos/semihost/machine/sh/: meson.build
libos/semihost/machine/sparc/: meson.build
libos/semihost/machine/x86/: meson.build
libos/semihost/machine/xtensa/: meson.build
test/: meson.build
test/semihost/: meson.build  semihost-argv.c  semihost-get-cmdline.c
test/test-posix/: CMakeLists.txt  meson.build
